@startuml BinTreeStrategy
skinparam DefaultFontName "JetBrains Mono"
skinparam classAttributeIconSize 0
left to right direction

package "bintree.strategy" {
    class BinTree {
        - root: Node
        - rand: Random
        ..
        + BinTree()
        + getRoot(): int
        + isEmpty(): boolean
        + randomInsert(e: int): void
        + preOrder(todo: IAction): boolean
        + inOrder(todo: IAction): boolean
        + postOrder(todo: IAction): boolean
        + print(): void
    }

    class Node {
        - value: int
        - left: Node
        - right: Node
        --
        + Node(v: int)
        + getValue(): int
        + getLeft(): Node
        + setLeft(left: Node): void
        + getRight(): Node
        + setRight(right: Node): void
        + isLeaf(): boolean
        + isInternal(): boolean
        + preOrder(todo: IAction): boolean
        + inOrder(todo: IAction): boolean
        + postOrder(todo: IAction): boolean
        + print(): void
    }

    interface IAction {
        + execute(node: Node): boolean
    }

    class Printer
    class Summation {
        - sum: int
        --
        + Summation()
        + getSum(): int
        + execute(node: Node): boolean
    }

    class MaxSelect {
        - max: int
        --
        + MaxSelect(i: int)
        + getMax(): int
        + execute(node: Node): boolean
    }

    class LinearSearch {
        - value: int
        - found: boolean
        --
        + LinearSearch()
        + getValue(): int
        + isFound(): boolean
        + execute(node: Node): boolean
    }

    class CondMaxSearch {
        - found: boolean
        - max: int
        --
        + CondMaxSearch()
        + isFound(): boolean
        + getMax(): int
        + execute(node: Node): boolean
    }

    class BinTreeStrategy {
        + main(args: String[]): void
    }
}

BinTree *-- Node : root
Node *-- Node : left/right
BinTree ..> IAction : traversals
Node ..> IAction : visits
IAction <|.. Printer
IAction <|.. Summation
IAction <|.. MaxSelect
IAction <|.. LinearSearch
IAction <|.. CondMaxSearch
BinTreeStrategy ..> BinTree
BinTreeStrategy ..> Printer
BinTreeStrategy ..> Summation
BinTreeStrategy ..> MaxSelect
BinTreeStrategy ..> LinearSearch
BinTreeStrategy ..> CondMaxSearch

note right of BinTree
    BinTree is the context.
    It owns the tree structure and delegates traversal behavior
    to IAction implementations.
end note

note right of IAction
    Strategy interface.
    execute() decides whether traversal should continue.
end note

note right of Node
    Node owns the recursive traversal logic.
    It walks the tree and applies the chosen strategy.
end note

note bottom of BinTree
    Design pattern used here:
    Strategy

    The tree behavior changes depending on the IAction implementation,
    without changing the BinTree or Node classes.
end note

@enduml